--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+			<div class="slides">				
+				<section data-markdown>
+                    # Houston Elixir 2016-10-05
+                    ## Basic programming in Elixir
+                </section>
+                <section data-markdown="slides/01-overview.md"></section>
+                <section data-markdown="slides/02-elixir-types.md"></section>
 			</div>
 		</div>
 
