Add types slides.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 </section>
                 <section data-markdown="slides/01-overview.md"></section>
                 <section data-markdown="slides/02-elixir-types.md"></section>
+                <section data-markdown="slides/02a-elixir-types-numeric.md"></section>
+                <section data-markdown="slides/02b-elixir-types-atoms.md"></section>
+                <section data-markdown="slides/02c-elixir-types-strings.md"></section>
+                <section data-markdown="slides/02d-elixir-types-collections.md"></section>
 			</div>
 		</div>
 
