--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <section data-markdown="slides/02b-elixir-types-atoms.md"></section>
                 <section data-markdown="slides/02c-elixir-types-strings.md"></section>
                 <section data-markdown="slides/02d-elixir-types-collections.md"></section>
+                <section data-markdown="slides/02e-elixir-types-functions.md"></section>
 			</div>
 		</div>
 
