Start more on fucntions.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <section data-markdown="slides/02c-elixir-types-strings.md"></section>
                 <section data-markdown="slides/02d-elixir-types-collections.md"></section>
                 <section data-markdown="slides/02e-elixir-types-functions.md"></section>
+                <section data-markdown="slides/03-elixir-functions.md"></section>
 			</div>
 		</div>
 
